Store devices that only need to be enumerated once

Some devices that only need to be enumerated once and then
can be ignored (for example, hub devices, devices that
failed enumeration, etc.). Currently these devices are
enumerated each time UsbServiceImpl::EnumerateDevice() is
called since they are added to |new_devices| at
UsbServiceImpl::OnDeviceList(). This patch add code to
store those devices and not enumerate them again.

BUG=604792

Review-Url: https://codereview.chromium.org/1903933002
Cr-Commit-Position: refs/heads/master@{#390234}

Former-commit-id: d23f2ba75f50575513dcbde328c6041e4d47716c